# java_repository_rules

./: README.md
01_no_conf_no_local_jdk/: WORKSPACE
02_no_conf_local_jdk/: WORKSPACE
03_conf_local_jdk/: BUILD.bazel  WORKSPACE
04_remote_jdk/: BUILD.bazel  WORKSPACE
local/: autoconfigure.bzl  configure.bzl
sample_java_config/: autoconfigure.bzl  local.bzl  remote.bzl
sample_java_rules/: rules.bzl  toolchain.bzl
